# nukon-pi-detect

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: false-positive.md  pattern-proposal.md
.github/workflows/: publish.yml  tests.yml
examples/: clean_input.txt  malicious_input.txt
nukon_pi_detect/: __init__.py  cli.py  detector.py  patterns.py  report.py
tests/: test_detector.py
